--- a/frontend/pages/index.html
+++ b/frontend/pages/index.html
@@ -4,14 +4,14 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>MailInsight</title>
-  <link rel="stylesheet" href="style.css" />
+  <link rel="stylesheet" href="../assets/styles/style.css" />
 </head>
 <body>
 
   <!-- Navbar -->
   <header class="navbar">
     <div class="logo">
-      <img src="icon.png" alt="MailInsight logo" />
+      <img src="../assets/images/icon.png" alt="MailInsight logo" />
       <span>MailInsight</span>
     </div>
     <!-- ...existing code... -->
@@ -125,7 +125,7 @@
       </p>
     </div>
     <div class="welcome-image" data-aos="fade-left">
-      <img src="laptop-scanning.png" alt="Scanning Email Screenshot"  class="image-flex"/>
+      <img src="../assets/images/laptop-scanning.png" alt="Scanning Email Screenshot"  class="image-flex"/>
       <div class="status-box">
         <p>youremail@example.com</p>
         <p>MailInsight is analyzing your inbox</p>
@@ -270,7 +270,7 @@
     MailInsight | All Rights Reserved
   </footer>
   <!-- Scripts -->
-  <script src="script.js"></script>
+  <script src="../assets/scripts/script.js"></script>
   <script src="https://unpkg.com/aos@2.3.4/dist/aos.js"></script>
   <script>AOS.init();</script>
 </body>
